--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -42,6 +42,6 @@
         <p><span class="feature-title">3. Solicit Feedback:</span> Request immediate feedback on your documents to continuously improve your services and strengthen customer relationships.</p>
     </div>
 
-    <p>Experience better customer engagement and business efficiency with these new features. Download our app today!</p>
+    <p>Experience better customer engagement and business efficiency with these new features. Subscribe today!</p>
 </body>
 </html>
