--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Enhance Your Productivity with Our App’s Advanced Features!</h1>
+    <h1>Get better customer engagement and business efficienty!</h1>
 
     <div class="feature">
         <p><span class="feature-title">1. Get a Read Receipt:</span> Know when your Estimates, Quotes, and Invoices are opened, allowing for timely follow-ups and improved response rates.</p>
