--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="feature">
-        <p><span class="feature-title">3. Solicit Feedback:</span> Request immediate feedback on your documents to continuously improve your services and strengthen customer relationships.</p>
+        <p><span class="feature-title">3. Solicit Feedback:</span> Request immediate feedback on your Estimates, Quotes, and Invoices  to continuously improve your services and strengthen customer relationships.</p>
     </div>
 
     <p>Experience better customer engagement and business efficiency with these new features. Subscribe today!</p>
