--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -31,7 +31,13 @@
     </style>
 </head>
 <body>
-    <h1>Get better customer engagement and business efficiency!</h1>
+
+    <h1>
+        Unlock Premium Features with Our Subscription Plan!
+    </h1>
+    <h2> To take full advantage of our powerful new tools, including: </h2>
+    
+    <h3>Get better customer engagement and business efficiency!</h3>
 
     <div class="feature">
         <p><span class="feature-title">1. Get a Read Receipt:</span> Know when your Estimates, Quotes, and Invoices are opened, allowing for timely follow-ups and improved response rates.</p>
