--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -35,10 +35,9 @@
     <h1>
         Unlock Premium Features with Our Subscription Plan!
     </h1>
-    <h2> To take full advantage of our powerful new tools, including: </h2>
+    <h2> Get better customer engagement and business efficiency by
+        taking full advantage of these powerful features, including: </h2>
     
-    <h3>Get better customer engagement and business efficiency!</h3>
-
     <div class="feature">
         <p><span class="feature-title">1. Get a Read Receipt:</span> Know when your Estimates, Quotes, and Invoices are opened, allowing for timely follow-ups and improved response rates.</p>
     </div>
