--- a/subscribe_m.html
+++ b/subscribe_m.html
@@ -50,6 +50,6 @@
         <p><span class="feature-title">3. Solicit Feedback:</span> Request immediate feedback on your Estimates, Quotes, and Invoices  to continuously improve your services and strengthen customer relationships.</p>
     </div>
 
-    <p>Experience better customer engagement and business efficiency with these new features. Subscribe today!</p>
+    <p>Experience better customer engagement and business efficiency with these new features.<strong>Subscribe today! </strong> </p>
 </body>
 </html>
