--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,80 @@
-Privacy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> 1/1/2024</p>
+
+    <h2>1. Introduction</h2>
+    <p>Welcome to One Boss! Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your personal information when you use our app, One Boss.</p>
+
+    <h2>2. Information We Collect</h2>
+    <h3>2.1 Personal Information</h3>
+    <p>We may collect the following personal information:</p>
+    <ul>
+        <li>Name</li>
+        <li>Email address</li>
+        <li>Phone number</li>
+        <li>Billing address</li>
+        <li>Payment information (e.g., credit card details)</li>
+    </ul>
+
+    <h3>2.2 Usage Data</h3>
+    <p>We automatically collect information about how you interact with our app, such as:</p>
+    <ul>
+        <li>Device information (e.g., device type, operating system)</li>
+        <li>IP address</li>
+        <li>App usage data (e.g., features used, time spent on the app)</li>
+        <li>Log files and cookies</li>
+    </ul>
+
+    <h2>3. How We Use Your Information</h2>
+    <p>We use your information for the following purposes:</p>
+    <ul>
+        <li>To provide, maintain, and improve our app</li>
+        <li>To process transactions and send related information (e.g., confirmations, invoices)</li>
+        <li>To communicate with you, including responding to your inquiries and providing customer support</li>
+        <li>To send technical notices, updates, security alerts, and administrative messages</li>
+        <li>To personalize your experience and improve our app</li>
+        <li>To monitor and analyze trends, usage, and activities</li>
+    </ul>
+
+    <h2>4. Sharing Your Information</h2>
+    <p>We do not sell or rent your personal information to third parties. We may share your information with:</p>
+    <ul>
+        <li>Service providers that perform services on our behalf (e.g., payment processing, data analysis)</li>
+        <li>Legal authorities if required by law or to protect our rights and property</li>
+        <li>Business partners with your consent</li>
+    </ul>
+
+    <h2>5. Data Security</h2>
+    <p>We implement reasonable security measures to protect your personal information from unauthorized access, use, or disclosure. However, no internet-based service is 100% secure, and we cannot guarantee the absolute security of your information.</p>
+
+    <h2>6. Your Rights and Choices</h2>
+    <p>Depending on your location, you may have the following rights regarding your personal information:</p>
+    <ul>
+        <li>The right to access the personal information we hold about you</li>
+        <li>The right to request that we correct or update your personal information</li>
+        <li>The right to request the deletion of your personal information</li>
+        <li>The right to object to or restrict our processing of your personal information</li>
+        <li>The right to data portability</li>
+    </ul>
+    <p>To exercise these rights, please contact us at <a href="mailto:admin@onebosssoftware.com">admin@onebosssoftware.com</a>.</p>
+
+    <h2>7. Children's Privacy</h2>
+    <p>Our app is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If we learn that we have collected personal information from a child under 13, we will delete that information promptly.</p>
+
+    <h2>8. Changes to This Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.</p>
+
+    <h2>9. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+    <p>Email: <a href="mailto:admin@onebosssoftware.com">admin@onebosssoftware.com</a></p>
+    
+</body>
+</html>
+
