Update governing law terms.html

--- a/terms.html
+++ b/terms.html
@@ -73,7 +73,7 @@
 
     <div class="section">
         <h2>7. Governing Law</h2>
-        <p>7.1. These terms and conditions are governed by and construed in accordance with the laws of [Your Country/State], and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
+        <p>7.1. These terms and conditions are governed by and construed in accordance with the laws of Unites States/Florida, and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
     </div>
 
     <div class="section">
