email address change
email

--- a/privacy.html
+++ b/privacy.html
@@ -63,7 +63,7 @@
         <li>The right to object to or restrict our processing of your personal information</li>
         <li>The right to data portability</li>
     </ul>
-    <p>To exercise these rights, please contact us at <a href="mailto:admin@onebosssoftware.com">admin@onebosssoftware.com</a>.</p>
+    <p>To exercise these rights, please contact us at <a href="mailto:support@kodekommando.com">admin@support@kodekommando.com</a>.</p>
 
     <h2>7. Children's Privacy</h2>
     <p>Our app is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If we learn that we have collected personal information from a child under 13, we will delete that information promptly.</p>
