update email address

--- a/terms.html
+++ b/terms.html
@@ -83,7 +83,7 @@
 
     <div class="section">
         <h2>9. Contact Us</h2>
-        <p>9.1. If you have any questions about these terms and conditions, please contact us at <a href="mailto:admin@onebosssoftware.com">admin@onebosssoftware.com</a>.</p>
+        <p>9.1. If you have any questions about these terms and conditions, please contact us at <a href="mailto:support@kodekommando.com">support@kodekommando.com</a>.</p>
     </div>
 </body>
 </html>
